# hfb

./: .gitignore  ECOSYSTEM.md  FEATURES.md  GLOSSARY.md  README.md  ROADMAP.md  pyproject.toml
configs/: default.yaml
docs/: HF_SPACE_README.md  REFERENCES.md
examples/: craft_mission_demo.py  export_slm_hologram.py  flux_bubble_demo.py  hemi_void_slingshot_demo.py
hfb/: __init__.py  cli.py
hfb/analog_gravity/: __init__.py  symbolic.py
hfb/bec/: acoustic.py
hfb/bubble/: __init__.py  hemi_void.py  stability.py  topology.py  warp_conduit.py
hfb/craft/: __init__.py  mission.py
hfb/defects/: __init__.py  conformal.py  densities.py
hfb/electro_vibrational/: __init__.py  dynamics.py  observer_sync.py  transducer.py
hfb/hopf/: __init__.py  fibration.py  hopfion.py
hfb/integration/: __init__.py  vqc_proto.py
hfb/optics/: __init__.py  nematic.py
hfb/utils/: __init__.py
notebooks/: 01_flux_bubble_explorer.ipynb  02_acoustic_metrics_symbolic.ipynb  03_bec_acoustic_backend.ipynb  04_slm_vortex_export.ipynb  05_feature_tour.ipynb
scripts/: deploy_hf_space.sh  sync_hf_space.sh
space/hopf-flux-bubble/: README.md  build_info.py  demo_core.py  requirements.txt
space/hopf-flux-bubble/configs/: default.yaml
space/hopf-flux-bubble/hfb/: __init__.py  cli.py
space/hopf-flux-bubble/hfb/analog_gravity/: acoustic.py  warp_compare.py
space/hopf-flux-bubble/hfb/bec/: __init__.py  bogoliubov.py  demo.py  gpe.py  vortex.py
space/hopf-flux-bubble/hfb/bubble/: stability.py  warp_conduit.py
space/hopf-flux-bubble/hfb/craft/: dynamics.py  mission.py
space/hopf-flux-bubble/hfb/defects/: __init__.py  densities.py
space/hopf-flux-bubble/hfb/electro_vibrational/: __init__.py  charge_envelopes.py  dynamics.py  phase_alignment.py  transducer.py
space/hopf-flux-bubble/hfb/hopf/: __init__.py  fibration.py  hopfion.py
space/hopf-flux-bubble/hfb/optics/: __init__.py  lg_modes.py  raytrace.py  slm_export.py
space/hopf-flux-bubble/hfb/utils/: grid.py  viz.py
tests/: test_craft.py  test_electro_vibrational.py  test_extensions.py  test_hf_space.py  test_hfb.py  test_toroidal_viz_alcubierre.py  test_v014.py
web/: build_info.py  demo_core.py  gradio_demo.py
