[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hopf-flux-bubble"
version = "0.1.0"
description = "Analog gravity, topological defects, and Hopf structures for effective warp-bubble geometries"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kinaar8340" }]
keywords = [
    "analog-gravity",
    "topological-defects",
    "hopf-fibration",
    "nematic",
    "effective-metric",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
notebook = ["jupyter>=1.0", "ipykernel>=6.0"]
symbolic = ["sympy>=1.12"]

[project.scripts]
hfb-demo = "hfb.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["hfb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["hfb", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]