[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hopf-flux-bubble"
version = "0.1.2"
description = "Analog gravity, topological defects, and Hopf structures for effective warp-bubble geometries"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kinaar8340" }]
keywords = [
    "analog-gravity",
    "topological-defects",
    "hopf-fibration",
    "nematic",
    "effective-metric",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
notebook = ["jupyter>=1.0", "ipykernel>=6.0", "ipywidgets>=8.0"]
symbolic = ["sympy>=1.12"]
slm = ["Pillow>=9.0"]
all = ["hopf-flux-bubble[dev,notebook,symbolic,slm]"]

[project.scripts]
hfb-demo = "hfb.cli:main"
hfb-export-slm = "hfb.cli:export_slm_main"
hfb-symbolic = "hfb.cli:symbolic_main"
hfb-bec-demo = "hfb.cli:bec_main"
hfb-check = "hfb.cli:check_ecosystem_main"

[tool.hatch.build.targets.wheel]
packages = ["hfb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["hfb", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]