[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hopf-flux-bubble"
version = "0.3.1"
description = "Analog gravity, Hopf flux bubbles, electro-vibrational transducer control, and craft/payload dynamics"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kinaar8340" }]
keywords = [
    "analog-gravity",
    "topological-defects",
    "hopf-fibration",
    "nematic",
    "effective-metric",
    "electro-vibrational",
    "flux-bubble",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    # Shared core — Hopf maps, defects, grids (canonical).
    # Hatch disallows git URL deps unless allow-direct-references is set.
    # Prefer local editable first:  pip install -e ../flux_hopf_lib
    # Or:  pip install "flux-hopf-lib @ git+https://github.com/kinaar8340/flux_hopf_lib.git@v0.1.0"
    "flux-hopf-lib>=0.1.0",
]

# Allow PEP 508 direct references if someone pins a git URL in an override/env.
[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
notebook = ["jupyter>=1.0", "ipykernel>=6.0", "ipywidgets>=8.0"]
symbolic = ["sympy>=1.12"]
slm = ["Pillow>=9.0"]
all = ["hopf-flux-bubble[dev,notebook,symbolic,slm]"]

[project.scripts]
hfb-demo = "hfb.cli:main"
hfb-export-slm = "hfb.cli:export_slm_main"
hfb-symbolic = "hfb.cli:symbolic_main"
hfb-bec-demo = "hfb.cli:bec_main"
hfb-check = "hfb.cli:check_ecosystem_main"
hfb-slingshot = "hfb.cli:slingshot_main"
hfb-mission = "hfb.cli:mission_main"

[tool.hatch.build.targets.wheel]
packages = ["hfb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["hfb", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]